--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-<h1>testing</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css"> 
+</head>
+<body>
+    <main>
+        <aside>
+            <div id="user-info">
+                <p>Name: Example</p>
+                <p>Username: Example</p>
+                <p>button will go here</p>
+            </div>
+            <div id="personal-tasks">
+                <h3>MY Personal Tasks</h3>
+            </div>
+            <div id="my-organizations">
+                <h3>My Organizations</h3>
+                <ul>
+                    <li><h4>list starts here</h4></li>
+                </ul>
+            </div>
+        </aside>
+        <div id="org-info">
+            
+        </div>
+        <div id="content-container">
+            <div class="list" id="1">
+                <div>
+                    <h3>LIST_NAME</h3>
+                    <ul>
+                        <li><h4>TASK 1</h4></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="list" id="2">
+                <div>
+                    <h3>list2</h3>
+                </div>
+            </div>
+            <div class="list" id="3">
+                <div>
+                    <h3>list3</h3>
+                </div>
+            </div>
+
+            </div>
+        </div>
+    </main>
+    <div id="task-card" style="display:none">
+        <h2>card title</h3>
+        <h3>Date Created</h5>
+        <h3>Date Due</p>
+        <p>Description</p>
+    </div>
+</body>
+</html>
