--- a/index.html
+++ b/index.html
@@ -39,17 +39,43 @@
     </main>
     <div class="hide" id="hide-task" data-action="close" style="display:none">
         <div id="task-card" class="pop-up" >
-            <h2>card title</h2>
-            <h3 class="created">Date Created</h3>
-            <h3 class = "due">Date Due</h3>
-            <p>Description</p>
+            <div id="task-info">
+                <h2>card title</h2>
+                <h3 class="created">Date Created</h3>
+                <h3 class = "due">Date Due</h3>
+                <p>Description</p>
+                <button id="edit-task-btn">Update Task</button>
+                <button id="delete-task-btn">Delete Task</button>
+            </div>
+            <div id="edit-task-div" style="display:none">
+                <form id="edit-task-form">
+                    <label for="title">Title</label><br>
+                    <input type="text" name="title"><br>
+                    <label for="due">Date Due</label><br>
+                    <input type="text" name="due"><br>
+                    <label for="dscrp">Description</label><br>
+                    <textarea type="text" name="dscrp"></textarea>
+                    <input type="submit" value="Update task">
+                </form>
+            </div>
         </div>
     </div>
     <div class="hide" id="hide-new-form" data-action="close" style="display:none">
         <form class="pop-up" id="new-org-form">
             <label for="name">Org Name</label><br>
-            <input type="text" id="name" name="name"><br>
+            <input type="text" name="name"><br>
             <input type="submit" value="Create Organization">
+        </form>
+    </div>
+    <div class="hide" id="new-task-div" style="display:none" data-action="close">
+        <form id="new-task-form" class="pop-up">
+            <label for="title">Title</label><br>
+            <input type="text" name="title"><br>
+            <label for="due">Date Due</label><br>
+            <input type="text" name="due"><br>
+            <label for="dscrp">Description</label><br>
+            <textarea type="text" name="dscrp"></textarea>
+            <input type="submit" value="Create task">
         </form>
     </div>
 </body>
