sign in page done

--- a/index.html
+++ b/index.html
@@ -86,5 +86,14 @@
             <input type="submit" value="Create List">
         </form>
     </div>
+    <div class= "hide" id="login-div" style="display:none" data-action="close">
+        <form id="login-form" class="pop-up">
+            <label for="username">Username</label><br>
+            <input type="text" name="username"><br>
+            <label for="password">Password</label><br>
+            <input type="text" name="Password"><br>
+            <input type="submit" value="Login">
+        </form>
+    </div>
 </body>
 </html>
