fixed deadline dates

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <label for="title">Title</label><br>
             <input type="text" name="title"><br>
             <label for="due">Date Due</label><br>
-            <input type="text" name="due"><br>
+            <input type="date" name="due"><br>
             <label for="dscrp">Description</label><br>
             <textarea type="text" name="dscrp"></textarea>
             <input type="submit" value="Create task">
