--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="index.js" defer></script>
 </head>
 <body>
+    <div id='testing'>
     <main>
         <aside>
             <div id="user-info">
@@ -134,6 +135,6 @@
     </div>
     
 
-
+</div>
 </body>
 </html>
